# catalogcreator

./: .gitignore  3.1.yml  LICENSE  README.md  cat.py  pyproject.toml
oscal/: catalog.py  control.py  oscal.py
